# FastApiDemo

./: .gitignore  Dockerfile  pyproject.toml  readme.md
.github/workflows/: github-actions-demo.yml
