[tool.poetry]
name = "fastapidemo"
version = "0.1.0"
description = ""
authors = ["Erno <fogsong233@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
